# wiz-term

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  webview.rs
src-tauri/src/pty/: commands.rs  mod.rs  session.rs  tmux.rs
src-tauri/src/storage/: database.rs
src/lib/api/: terminal.ts
src/lib/components/shared/: ContextMenu.svelte  ResizeHandle.svelte  SettingsPanel.svelte
src/lib/components/terminal/: LayoutSlot.svelte  SplitContainer.svelte  SplitResizer.svelte  TerminalLane.svelte  TerminalLanes.svelte  TerminalPane.svelte
src/lib/components/webview/: WebviewPane.svelte
src/lib/stores/: contextMenu.ts  minimapStore.ts  settings.ts  terminal.ts  terminalBounds.ts  terminalCanvases.ts
src/lib/types/: terminal.ts
src/lib/utils/: terminalLayout.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/minimap/: +page.svelte
